deploy/overlays/ibmcloud/postgresql-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
spec:
  template:
    spec:
      containers:
        - name: postgresql
          image: us.icr.io/accounts-namespace/postgres:15-alpine
