deploy/overlays/ibmcloud/ingress-ibm.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: accounts
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: public-iks-k8s-nginx
  rules:
    - host: accounts-cluster-bdd840f7202bc572ab2a39622bf753f9-0000.us-south.containers.appdomain.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: accounts
                port:
                  number: 8080
